manifests/hellowhale-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellowhale
  labels:
    app: hellowhale
spec:
  selector:
    app: hellowhale
    tier: web
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
